# Master-thesis-code

./: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .Customer.cpp.swp  .S4_S2_4i8s.txt.swp  .SampleConfig.h.in.swp  .cplex-cpp-ex.cpp.swp  .main.cpp.swp  .swp  CMakeLists.txt  Customer.cpp  README.txt  S4_S2_4i8s.txt  a.out  main.cpp  test.cpp
includes/: .vertex.hpp.swp  vertex.hpp
includes/models/: .MIP_depth.hpp.swp  .depth_node_callback.hpp.swp  .distances_enum.hpp.swp  .dsu.hpp.swp  .gvrp_instance.hpp.swp  .gvrp_solution.hpp.swp  .mip_depth.hpp (Case Conflict).swp  .mip_solution_info.hpp.swp  .node_callback_cplex.hpp.swp  .test.hpp.swp  .test_model.hpp.swp  .vertex.hpp.swp  .vrp_instance.hpp.swp  cplex_model.hpp  depth_node_callback.hpp  distances_enum.hpp  dsu.hpp  facility_location_instance (Case Conflict 1).hpp  facility_location_instance (Case Conflict 2).hpp  facility_location_instance (Case Conflict 3).hpp  facility_location_instance (Case Conflict 4).hpp  facility_location_instance (Case Conflict 5).hpp  gvrp_feasible_solution_heuristic.hpp  gvrp_heuristic.hpp  gvrp_instance.hpp  gvrp_model.hpp  gvrp_solution.hpp  local_search.hpp  mip_depth.hpp  mip_solution_info.hpp  vertex.hpp  vrp_instance.hpp
includes/models/bpp_models/: bpp_instance.hpp
includes/models/cplex/: .cplex_model.hpp.swp  cplex_model.hpp
includes/models/cubic_model/: .cubic_model.hpp.swp  cubic_model.hpp  custom_test_constraint.hpp  energy_lb_constraint.hpp  energy_lifting_constraint.hpp  energy_ub_constraint.hpp  extra_constraint_cubic_model.hpp  improved_cubic_model.hpp  improved_subcycle_lazy_constraint_cubic_model.hpp  invalid_edge_preprocessing.hpp  invalid_edge_preprocessing_2.hpp  invalid_edge_preprocessing_3.hpp  invalid_edge_preprocessing_4.hpp  invalid_paths_constraint.hpp  lazy_constraint_cubic_model.hpp  max_afs_visit_constraint.hpp  max_distance_route_constraint.hpp  min_distance_route_constraint.hpp  mip_start_cubic_model.hpp  no_consecutive_afs_visit_preprocessing.hpp  preprocessing_cubic_model.hpp  routes_lb_constraint.hpp  routes_order_constraint.hpp  subcycle_lazy_constraint_cubic_model.hpp  subcycle_user_constraint_cubic_model.hpp  user_constraint_cubic_model.hpp
includes/models/emh_model/: emh_model.hpp  extra_constraint_emh_model.hpp  invalid_edge_preprocessing.hpp  invalid_edge_preprocessing_2.hpp  invalid_edge_preprocessing_3.hpp  invalid_edge_preprocessing_4.hpp  preprocessing_emh_model.hpp  user_constraint_emh_model.hpp
includes/models/gvrp_models/: .gvrp_afs_tree.hpp.swp  .gvrp_feasible_solution_heuristic.hpp.swp  .gvrp_local_search.hpp.swp  .gvrp_solution.hpp.swp  gvrp_afs_tree.hpp  gvrp_instance.hpp  gvrp_local_search.hpp  gvrp_solution.hpp
includes/models/instance_generation_model/: .instance_generation_model.hpp.swp  .subcycle_lazy_constraint.hpp.swp  .subcycle_user_constraint.hpp.swp  .user_constraint.hpp.swp  instance_generation_model.hpp  lazy_constraint.hpp  subcycle_lazy_constraint.hpp  subcycle_user_constraint.hpp  user_constraint.hpp
includes/tests/: .gvrp_tests.hpp.swp
includes/tests/gvrp/: .cubic_model_tests.hpp.swp  cubic_model_tests.hpp  emh_model_tests.hpp  matheus_model_2_tests.hpp  matheus_model_3_tests.hpp  matheus_model_tests.hpp
includes/tests/instance_generation/: model_tests.hpp
includes/tests/mlsa/: model_tests.hpp
includes/utils/: .erdogan_gvrp_instance_reader.hpp.swp  .util.cpp.swp  .util.hpp.swn  .util.hpp.swo  .util.hpp.swp  dsu.hpp  erdogan_gvrp_instance_reader.hpp  util.hpp
includes/utils/cplex/: .compact_model.hpp.swp  .extra_constraint_compact_model.hpp.swp  .max_afs_visit_constraint.hpp.swp  .max_distance_route_constraint.hpp.swp  .mip_start_compact_model.hpp.swp  .preprocessing_compact_model.hpp.swp  .quadratic_model.hpp.swp  .quadratic_model_subcycle_constraint_callback.hpp.swo  .quadratic_model_subcycle_constraint_callback.hpp.swp  .user_constraint_compact_model.hpp.swp  compact_model.hpp  custom_test_constraint.hpp  energy_lb_constraint.hpp  energy_lifting_constraint.hpp  energy_ub_constraint.hpp  extra_constraint_compact_model.hpp  facility_location.hpp  improved_compact_model.hpp  improved_subcycle_lazy_constraint_compact_model.hpp  invalid_edge_preprocessing.hpp  invalid_edge_preprocessing_2.hpp  invalid_edge_preprocessing_3.hpp  invalid_edge_preprocessing_4.hpp  invalid_paths_constraint.hpp  lazy_constraint_compact_model.hpp  max_afs_visit_constraint.hpp  max_distance_route_constraint.hpp  (+11 more)
instances/: .S1_20c3sU10.txt.swp  Large_VA_Input_111c_21s.txt  Large_VA_Input_111c_22s.txt  Large_VA_Input_111c_24s.txt  Large_VA_Input_111c_28s.txt  Large_VA_Input_200c_21s.txt  Large_VA_Input_300c_21s.txt  Large_VA_Input_450c_21s.txt  Large_VA_Input_500c_21s.txt
resources/solutions/: Large_VA_Input_111c_26s.txt.sol  Large_VA_Input_111c_28s.txt.sol  Large_VA_Input_200c_21s.txt.sol  Large_VA_Input_500c_21s.txt.sol  S2_20c3sC6.txt.sol  S3_S2_10i6s.txt.sol  S3_S2_8i6s.txt.sol  S4_S2_4i6s.txt.sol
solutions/: Large_VA_Input_111c_21s.txt.sol  Large_VA_Input_111c_22s.txt.sol  Large_VA_Input_111c_24s.txt.sol  Large_VA_Input_300c_21s.txt.sol  Large_VA_Input_350c_21s.txt.sol  Large_VA_Input_400c_21s.txt.sol  Large_VA_Input_450c_21s.txt.sol  S1_20c3sU10.txt.sol  S1_20c3sU3.txt.sol  S2_20c3sC10.txt.sol  S2_20c3sC5.txt.sol  S2_20c3sC8.txt.sol  S2_20c3sC9.txt.sol  S3_S2_2i6s.txt.sol  S3_S2_6i6s.txt.sol
src/: .Customer.cpp.swp  .main.cpp.swm  .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  .vertex.cpp.swp  main.cpp  vertex.cpp
src/models/: .MIP_depth.cpp.swp  .depth_node_callback.cpp.swp  .dsu.cpp.swp  .gvrp_instance.cpp.swp  .gvrp_solution.cpp.swp  .mip_depth.cpp (Case Conflict).swp  .node_callback_cplex.cpp.swp  .vertex.cpp.swp  depth_node_callback.cpp  dsu.cpp  facility_location_instance (Case Conflict 1).cpp  gvrp_feasible_solution_heuristic.cpp  gvrp_heuristic.cpp  gvrp_instance.cpp  gvrp_model.cpp  gvrp_solution.cpp  mip_depth.cpp  mip_solution_models.cpp  vertex.cpp  vrp_instance.cpp
src/utils/: .util.cpp.swm  .util.cpp.swn  .util.cpp.swo  .util.cpp.swp  dsu.cpp  util.cpp
support/cmake/: ..FindCPLEX.cmake
(+1041 files in other folders)
